# alexandria-code-intelligence

./: .gitignore  ANNOUNCEMENT.md  CONFIGURATION.md  Donation text.txt  LICENSE  README.md  WHY_IT_WORKS.md  pyproject.toml
examples/: contract.example.yaml
src/aci/: __init__.py  cross_file.py  engine.py  predictive.py  server.py
src/aci/contract/: __init__.py  contract.py
src/aci/dream/: __init__.py  engine.py
src/aci/graph/: __init__.py  code_graph.py  physics.py
src/aci/llm/: __init__.py  provider.py
src/aci/memory/: __init__.py  session_memory.py
src/aci/motor_cortex/: __init__.py  microglia.py
src/aci/perception/: __init__.py  ast_parser.py  import_resolver.py
src/aci/swarm/: __init__.py  archaeologist.py  architect.py  critic.py  dreamer.py  explorer.py
